<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="10"
    tools:context=".MainActivity3">



    <ImageView
        android:id="@+id/imgP"
        android:padding="20dp"
        android:layout_weight="9"
        android:layout_width="333dp"
        android:layout_height="70dp"/>

    <TextView
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/avis" />

    <EditText
        android:background="#5C252B1F"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butP"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:padding="10dp"
            android:text="@string/camera" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:padding="10dp"
            android:text="@string/poster" />

    </LinearLayout>






</LinearLayout>